--- a/ios/ASMRMobile/Info.plist
+++ b/ios/ASMRMobile/Info.plist
@@ -51,5 +51,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ionicons.ttf</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>We used your camera to scan bean's QR code.</string>
 </dict>
 </plist>
