--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,14 +5,17 @@ platform :ios, '11.0'
 
 target 'ASMRMobile' do
   config = use_native_modules!
+  permissions_path = '../node_modules/react-native-permissions/ios'
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'ASMRMobileTests' do
     inherit! :complete
