--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
 		"@react-navigation/bottom-tabs": "6.0.9",
 		"@react-navigation/native": "6.0.6",
 		"@react-navigation/native-stack": "6.2.5",
-		"axios": "^0.24.0",
+		"axios": "0.24.0",
 		"react": "17.0.2",
-		"react-native": "0.66.2",
+		"react-native": "0.66.3",
 		"react-native-camera": "4.2.1",
+		"react-native-device-info": "8.4.5",
+		"react-native-elements": "3.4.2",
 		"react-native-encrypted-storage": "4.0.2",
 		"react-native-permissions": "3.1.0",
 		"react-native-qrcode-scanner": "1.5.4",
 		"react-native-safe-area-context": "3.3.2",
 		"react-native-screens": "3.9.0",
+		"react-native-splash-screen": "3.2.0",
 		"react-native-vector-icons": "9.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
-		"@babel/runtime": "^7.16.0",
+		"@babel/runtime": "^7.16.3",
 		"@react-native-community/eslint-config": "^3.0.1",
 		"babel-jest": "^27.3.1",
 		"eslint": "7.32.0",
