--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@eva-design/eva": "2.1.1",
 		"@react-native-async-storage/async-storage": "1.15.11",
-		"@react-native-cookies/cookies": "6.0.11",
 		"@react-navigation/bottom-tabs": "6.0.9",
 		"@react-navigation/native": "6.0.6",
 		"@react-navigation/native-stack": "6.2.5",
+		"@ui-kitten/components": "5.1.1",
+		"@ui-kitten/metro-config": "5.1.1",
 		"axios": "0.24.0",
 		"react": "17.0.2",
 		"react-native": "0.66.3",
 		"react-native-camera": "4.2.1",
-		"react-native-device-info": "8.4.5",
-		"react-native-elements": "3.4.2",
+		"react-native-device-info": "8.4.6",
 		"react-native-encrypted-storage": "4.0.2",
+		"react-native-loading-spinner-overlay": "2.0.0",
 		"react-native-permissions": "3.1.0",
 		"react-native-qrcode-scanner": "1.5.4",
 		"react-native-safe-area-context": "3.3.2",
 		"react-native-screens": "3.9.0",
 		"react-native-splash-screen": "3.2.0",
+		"react-native-svg": "12.1.1",
 		"react-native-vector-icons": "9.0.0"
 	},
 	"devDependencies": {
