--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,7 +10,7 @@ target 'ASMRMobile' do
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => true
+    :hermes_enabled => false
   )
 
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
