--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@ui-kitten/components": "5.1.1",
 		"@ui-kitten/metro-config": "5.1.1",
 		"axios": "0.24.0",
+		"compare-versions": "4.1.1",
 		"react": "17.0.2",
 		"react-native": "0.66.3",
 		"react-native-camera": "4.2.1",
@@ -29,16 +30,18 @@
 		"react-native-encrypted-storage": "4.0.2",
 		"react-native-fast-image": "8.5.11",
 		"react-native-file-access": "2.0.0",
+		"react-native-file-logger": "0.2.1",
 		"react-native-loading-spinner-overlay": "2.0.0",
 		"react-native-permissions": "3.1.0",
 		"react-native-qrcode-scanner": "1.5.4",
 		"react-native-safe-area-context": "3.3.2",
 		"react-native-screens": "3.9.0",
+		"react-native-shake": "5.1.0",
 		"react-native-splash-screen": "3.2.0",
 		"react-native-svg": "12.1.1",
 		"react-native-v8": "0.66.3-patch.1",
 		"react-native-vector-icons": "9.0.0",
-		"v8-android-jit-nointl": "^9.93.0"
+		"v8-android-jit-nointl": "9.93.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
