--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Windows files should use crlf line endings
 # https://help.github.com/articles/dealing-with-line-endings/
 *.bat text eol=crlf
+
+# Yarn Berry
+/.yarn/releases/** binary
+/.yarn/plugins/** binary
