--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"axios": "0.24.0",
 		"compare-versions": "4.1.1",
 		"flow-bin": "0.165.1",
+		"javascript-time-ago": "2.3.10",
 		"react": "17.0.2",
 		"react-native": "0.66.3",
 		"react-native-camera": "4.2.1",
@@ -44,6 +45,7 @@
 		"react-native-svg": "12.2.0",
 		"react-native-v8": "0.66.3-patch.1",
 		"react-native-vector-icons": "9.0.0",
+		"react-time-ago": "7.1.3",
 		"v8-android-jit-nointl": "9.93.0"
 	},
 	"devDependencies": {
@@ -61,5 +63,5 @@
 	"jest": {
 		"preset": "react-native"
 	},
-	"packageManager": "yarn@3.1.0"
+	"packageManager": "yarn@3.1.1"
 }
