Update package name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,7 +139,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "me.hamzahjundi.asmr"
+        applicationId "id.danang.asmr"
         minSdkVersion rootProject.ext.minSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
